[project]
name = "text2image"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate==1.12.0",
    "applyllm==0.0.9rc3",
    "diffusers>=0.36.0",
    "huggingface-hub==1.3.5",
    "protobuf==6.33.5",
    "sentencepiece==0.2.1",
    "torch>=2.10.0",
    "transformers>=5.0.0",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git" }
diffusers = { git = "https://github.com/huggingface/diffusers.git" }
